refactor :sirix-query